# File-Indexer

./: CMakeLists.txt  DefaultDefinitions.h  FileInfo.cpp  FileInfo.h  LICENSE  Parameters.cpp  Parameters.h  README.md  main.cpp
ExampleData/Code/: utils.cpp  utils.hpp
ExampleData/Documents/: notes.md  report.txt
ExampleData/Misc/: todo.txt
